feat: Initial commit - Prepare for Hacktoberfest and establish core project structure

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>SRE Challenge</title>
+<title>SRE Chaos Challenge</title>
 </head>
 <body>
-<h1>SRE Challenge: My First Containerized App</h1>
+<h1>SRE Chaos Challenge: My First Containerized App</h1>
