refactor: Rename crash-challenge to graceful-degradation

--- a/url-anvil/public/index.html
+++ b/url-anvil/public/index.html
@@ -19,7 +19,7 @@
     <div class="card">
         <h3>How to Use for Challenges</h3>
         <ul>
-            <li><b>Crash Script Challenge:</b> Use the URL Anvil to find the breaking point of a service. By testing a large number of URLs or very slow URLs, you can observe how your service handles stress and identify its maximum RPS before failure.</li>
+            <li><b>Graceful Degradation Challenge:</b> Use the URL Anvil to test the resilience of your service. By subjecting it to a high load, you can observe how your service handles stress and maintains availability.</li>
             <li><b>Robust Service Challenge:</b> Integrate the URL Anvil into your service's testing pipeline. The `total_fetch_time_ms` and `average_fetch_time_ms` metrics can help you evaluate the efficiency and responsiveness of your service under load.</li>
             <li><b>Basic Usage:</b> Enter URLs in the text area, click "Test URLs" to run a benchmark, or "Load Sample URLs" for a quick start.</li>
         </ul>
